[jOOQ/jOOQ#9506] More work on Migrations API:
- Snapshots will be a commercial only feature
- CommitImpl should reject duplicate paths
- Add the ContentType.SCRIPT implementation
- Files.writeString() wasn't available in JDK 8 yet